--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,11 +48,23 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-asyncio httpx
         
-    - name: Run tests
+    - name: Run pytest tests
       run: |
-        python -m pytest test_service.py -v
+        # Run proper pytest tests
+        python -m pytest test_crawler.py -v --tb=short
+        
+    - name: Run integration tests
+      run: |
+        # Start service in background for integration test
+        python -m uvicorn main:app --host 0.0.0.0 --port 8000 &
+        sleep 15
+        
+        # Run integration test
+        python test_service.py
+        
+        # Clean up background process
+        pkill -f "uvicorn main:app" || true
 
   build:
     runs-on: ubuntu-latest
