--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,13 +19,18 @@ on:
           - skip
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  # Use Docker Hub as default, or GitHub Container Registry
+  # To use Docker Hub: set REGISTRY to 'docker.io' and IMAGE_NAME to 'your-dockerhub-username/crawler-service'
+  # To use GHCR: set REGISTRY to 'ghcr.io' and IMAGE_NAME to '${{ github.repository }}'
+  REGISTRY: docker.io
+  IMAGE_NAME: ${{ vars.DOCKER_IMAGE_NAME || format('{0}/crawler-service', github.repository_owner) }}
 
 jobs:
   test:
     runs-on: ubuntu-latest
     name: Run Tests
+    permissions:
+      contents: read
     
     steps:
     - name: Checkout code
@@ -70,6 +75,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     name: Build Docker Image
+    permissions:
+      contents: read
+      packages: write
     outputs:
       image-digest: ${{ steps.build.outputs.digest }}
       image-tag: ${{ steps.meta.outputs.version }}
@@ -86,8 +94,8 @@ jobs:
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: ${{ env.REGISTRY == 'docker.io' && secrets.DOCKER_USERNAME || github.actor }}
+        password: ${{ env.REGISTRY == 'docker.io' && secrets.DOCKER_PASSWORD || secrets.GITHUB_TOKEN }}
         
     - name: Extract metadata
       id: meta
@@ -141,6 +149,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     name: Deploy Service
+    permissions:
+      contents: read
     if: |
       github.ref == 'refs/heads/main' || 
       github.ref == 'refs/heads/master' || 
